--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,7 @@ framework = arduino
 lib_deps = 
     chris--a/Keypad@^3.1.1
     arduino-libraries/Servo@^1.1.8  ; Correct Servo library for Arduino Uno
-
+    marcoschwartz/LiquidCrystal_I2C@^1.1.4  ; Correct working LCD I2C library
 monitor_speed = 9600  ; Set Serial Monitor baud rate
 
 
